[project]
name = "LoadingBar_Py_Diggs"
version = "0.1.0"
authors = [
  { name="Velte Hollund", email="vetlehoo@gmail.com" },
]
description = "A Simple loading bar for python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/VHollund/LoadingBar"
"Bug Reports" = "https://github.com/VHollund/LoadingBar/issues"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
